feat(style.css): add h2 styling

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -22,6 +22,13 @@ canvas {
   border-radius: 10px;
 }
 
+h2 {
+  color: #fff;
+  font-family: Flappy;
+  font-size: 50px;
+  text-align: center;
+}
+
 span {
   color: #fff;
   font-size: 30px;
